--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -26,5 +26,21 @@ ports_description:
 map:
   - addon_config:rw
   - ssl:r
-environment:
-  HA_ADDON: "true"
+options:
+  #auth: true
+  #reporting: true
+  ssl: true
+  certfile: fullchain.pem
+  keyfile: privkey.pem
+  envvars: []
+schema:
+  log_level: list(trace|debug|info|notice|warning|error|fatal)?
+  #auth: bool
+  #reporting: bool
+  ssl: bool
+  certfile: str
+  keyfile: str
+  envvars:
+    - name: match(^INFLUXDB_([A-Z0-9_])+$)
+      value: str
+  leave_front_door_open: bool?
