--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -25,18 +25,18 @@ ports_description:
   9009/tcp: PostgreSQL wire protocol
 map:
   - addon_config:rw
-  - ssl:r
+  - ssl
 options:
-  #auth: true
-  #reporting: true
+  # auth: true
+  # reporting: true
   ssl: true
   certfile: fullchain.pem
   keyfile: privkey.pem
   envvars: []
 schema:
   log_level: list(trace|debug|info|notice|warning|error|fatal)?
-  #auth: bool
-  #reporting: bool
+  # auth: bool
+  # reporting: bool
   ssl: bool
   certfile: str
   keyfile: str
