--- a/questdb/Dockerfile
+++ b/questdb/Dockerfile
@@ -31,15 +31,14 @@ RUN \
 # Setup QuestDB
 ARG BUILD_ARCH=amd64
 
+# Copy everything over
 FROM questdb/questdb:8.3.0 AS builder
-
-WORKDIR /app
-
-COPY --from=builder /app .
+COPY --from=builder /app /app
 COPY --from=builder /usr/local/bin/gosu /usr/local/bin/gosu
-
 COPY --from=builder /docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
+
+WORKDIR /app
 
 # Create questdb user and group
 RUN groupadd -g 10001 questdb && \
