--- a/questdb/Dockerfile
+++ b/questdb/Dockerfile
@@ -12,12 +12,7 @@ ARG BUILD_ARCH=amd64
 RUN \
     apt-get update \
     && apt-get install -y --no-install-recommends \
-        libnginx-mod-http-lua=1:0.10.23-1 \
-        luarocks=3.8.0+dfsg1-1 \
-        nginx=1.22.1-9 \
-        procps=2:4.0.2-3 \
-    \
-    && luarocks install lua-resty-http 0.15-0 \
+        nginx \
     \
     && rm -fr \
         /tmp/* \
