--- a/questdb/Dockerfile
+++ b/questdb/Dockerfile
@@ -10,7 +10,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN \
     apt-get update \
     && apt-get install -y --no-install-recommends \
-        nginx=1.22.1-9 \
+        nginx=1.22.1-9+deb12u1 \
     \
     && rm -fr \
         /tmp/* \
