--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -12,16 +12,15 @@ arch:
 startup: services
 init: false
 ingress: true
-ingress_port: 9443
 ingress_stream: true
 privileged:
   - PERFMON
 ports:
-  9000/tcp: 9000
+  9000/tcp: 0
   8812/tcp: 8812
   9009/tcp: 9009
 ports_description:
-  9000/tcp: HTTP API
+  9000/tcp: HTTP API (not exposed by default)
   8812/tcp: InfluxDB Line Protocol
   9009/tcp: PostgreSQL wire protocol
 auth_api: true
@@ -34,6 +33,7 @@ options:
   ssl: true
   certfile: fullchain.pem
   keyfile: privkey.pem
+  ssl_port_influxdb: 9449
   envvars: []
 schema:
   log_level: list(trace|debug|info|notice|warning|error|fatal)?
@@ -42,6 +42,7 @@ schema:
   ssl: bool
   certfile: str
   keyfile: str
+  ssl_port_influxdb: int(1,65535)?
   envvars:
-    - name: match(^INFLUXDB_([A-Z0-9_])+$)
+    - name: match(^QUESTDB_([A-Z0-9_])+$)
       value: str
