--- a/questdb/rootfs/etc/nginx/nginx.conf
+++ b/questdb/rootfs/etc/nginx/nginx.conf
@@ -45,3 +45,12 @@ http {
     include /etc/nginx/includes/upstream.conf;
     include /etc/nginx/servers/*.conf;
 }
+
+
+stream {
+    log_format mqtt '$remote_addr [$time_local] $protocol $status $bytes_received ' 
+                '$bytes_sent $upstream_addr';
+
+    include /etc/nginx/includes/upstream_influxdb.conf;
+    include /etc/nginx/servers/*.stream;
+}
