--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -12,11 +12,12 @@ arch:
 startup: services
 init: false
 ingress: true
+ingress_port: 9443
 ingress_stream: true
 privileged:
   - PERFMON
 ports:
-  9000/tcp: 0
+  9000/tcp: 
   8812/tcp: 8812
   9009/tcp: 9009
 ports_description:
