--- a/questdb/rootfs/etc/nginx/nginx.conf
+++ b/questdb/rootfs/etc/nginx/nginx.conf
@@ -1,6 +1,9 @@
 # Run nginx in foreground.
 daemon off;
 
+# Load stream module.
+load_module /usr/lib/nginx/modules/ngx_stream_module.so;
+
 # This is run inside Docker.
 user root;
 
