--- a/questdb/Dockerfile
+++ b/questdb/Dockerfile
@@ -46,7 +46,7 @@ WORKDIR /var/lib/questdb
 COPY rootfs /
 
 # Health check
-HEALTHCHECK --start-period=3m \
+HEALTHCHECK \
     CMD curl --fail http://127.0.0.1:9000 || exit 1
 
 # Build arguments
