--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -31,18 +31,12 @@ map:
   - ssl
   - share:rw
 options:
-  # auth: true
-  # reporting: true
   ssl: false
   certfile: fullchain.pem
   keyfile: privkey.pem
-  # envvars: []
-  log_level: info
   logins_influx_line_protocol: []
 schema:
   log_level: list(trace|debug|info|notice|warning|error|fatal)?
-  # auth: bool
-  # reporting: bool
   ssl: bool
   certfile: str
   keyfile: str
@@ -51,6 +45,6 @@ schema:
       key_type: str
       x: str
       y: str
-  # envvars:
-  #   - name: match(^QUESTDB_([A-Z0-9_])+$)
-  #     value: str
+  envvars:
+    - name: match(^QUESTDB_([A-Z0-9_])+$)
+      value: str
