--- a/questdb/config.yaml
+++ b/questdb/config.yaml
@@ -35,8 +35,8 @@ options:
   certfile: fullchain.pem
   keyfile: privkey.pem
   logins_influx_line_protocol: []
+  envvars: []
 schema:
-  log_level: list(trace|debug|info|notice|warning|error|fatal)?
   ssl: bool
   certfile: str
   keyfile: str
